feat: agregar soporte para Stripe en el proyecto
- Incluir dependencias de Stripe en package.json para facilitar la integración de pagos.
- Actualizar el servicio de Stripe para mejorar la gestión de eventos, añadiendo tipado a los parámetros del listener de cambios en el elemento de tarjeta.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@stripe/stripe-js": "^5.0.0",
     "@angular/animations": "^17.0.0",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
@@ -25,6 +26,7 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
+    "@stripe/stripe-angular": "^5.0.0",
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
