--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "private": true,
   "dependencies": {
     "@stripe/stripe-js": "^5.0.0",
+    "@types/stripe-js": "^5.0.0",
+    "@types/stripe-angular": "^5.0.0",
     "@angular/animations": "^17.0.0",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
@@ -27,6 +29,8 @@
   },
   "devDependencies": {
     "@stripe/stripe-angular": "^5.0.0",
+    "@types/stripe-angular": "^5.0.0",
+    "@types/stripe-js": "^5.0.0",
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
