chore: actualizar dependencias de Stripe en package.json
- Reemplazar la dependencia de @stripe/stripe-angular por @stripe/stripe-js en package.json para optimizar la gestión de dependencias y alinearse con las mejores prácticas actuales.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@stripe/stripe-angular": "^5.0.0",
+    "@stripe/stripe-js": "^5.0.0",
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
