--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test": "ng test",
     "serve": "ng serve --port 4200",
     "build:prod": "ng build --configuration production",
-    "start:prod": "node server.js",
-    "postbuild": "npm run build:prod"
+    "start:prod": "node server.js"
   },
   "private": true,
   "dependencies": {
