--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "private": true,
   "dependencies": {
-    "@stripe/stripe-js": "^5.0.0",
     "@angular/animations": "^17.0.0",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
@@ -22,16 +21,17 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@stripe/stripe-js": "^5.0.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@stripe/stripe-js": "^5.0.0",
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
+    "@stripe/stripe-js": "^5.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.7.0",
     "jasmine-core": "~5.1.0",
@@ -40,6 +40,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.2.0"
   }
 }
