--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "serve": "ng serve --port 4200",
     "build:prod": "ng build --configuration production",
-    "start:prod": "node server.js"
+    "start:prod": "node server.js",
+    "test:build": "npm run build:prod && node test-build.js"
   },
   "private": true,
   "dependencies": {
